Web Inspector: Dark Mode: Increase the contrast in the console tab in @media (prefers-contrast: more) and @media (prefers-color-scheme: dark) https://bugs.webkit.org/show_bug.cgi?id=271859
Reviewed by NOBODY (OOPS!).

Increase the brightness of the error level, the user command, the warning level, and console message in ConsoleMessageView.css.
Increase the brightness of the glyph, the header, and the console.item in LogContentView.css.
Create variables --console-border-top-color and  --console-text-color in LogContentView.css.
Rename variables --background-color-selected, --border-color-selected, --border-color-error, and --border-color-warning to:
--console-background-color-selected, --console-border-color-selected, --console-border-color-error, and --console-border-color-warning in LogContentView.css.
Increase the brightness of the object tree in ObjectTreeView.css.

* Source/WebInspectorUI/UserInterface/Views/ConsoleMessageView.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .console-error-level .console-message-body):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .console-user-command > .console-message-body):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .console-warning-level .console-message-body):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .console-message .repeat-count):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .console-saved-variable):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .console-messages):
* Source/WebInspectorUI/UserInterface/Views/LogContentView.css:
(.console-messages:focus .console-item.selected):
(.console-messages:focus .console-item.selected + .console-item):
(@media (prefers-color-scheme: dark) .console-messages):
(@media (prefers-color-scheme: dark) .console-messages:focus .console-item.selected):
(@media (prefers-color-scheme: dark) .console-messages:focus .console-item.selected + .console

--- a/Source/WebInspectorUI/UserInterface/Views/ConsoleMessageView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ConsoleMessageView.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2013-2023 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -351,5 +352,32 @@
     .console-message .go-to-link:hover,
     .console-message .go-to-link:focus {
         color: var(--selected-secondary-text-color-active);
+    }
+
+    @media (prefers-contrast: more) {
+        .console-error-level .console-message-body {
+            color: hsl(10, 100%, 80%);
+        }
+
+        .console-user-command > .console-message-body {
+            color: hsl(209, 100%, 80%);
+        }
+
+        .console-warning-level .console-message-body {
+            color: hsl(53, 80%, 80%);
+        }
+
+        .console-message .repeat-count {
+            background-color: hsl(218, 70%, 80%);
+        }
+
+        .console-saved-variable {
+            color: hsl(0, 0%, 90%);
+        }
+
+        .console-messages {
+            --console-background-color-selected: hsl(233, 30%, 15%);
+            --console-border-color-selected: hsl(224, 30%, 20%);
+        }
     }
 }
